--- a/exchange.html
+++ b/exchange.html
@@ -2,28 +2,42 @@
 <html>
   <head>
     <title> Think Global Exchange Programs </title>
+    <link rel="stylesheet" type="text/css" href= "css/style.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/exchange-program.js"></script>
   </head>
 
   <body>
     <div class="wrapper">
       <header>
         <div class="logo">
+          <img src="images/Logo.jpg" alt="Think Global Logo" title="Think Global Logo">
         </div>
 
         <section class="search">
         </section>
 
         <nav class="topnav">
+          <a class="active" href="">Home</a>
+          <a href="#about">About</a>
+          <a href="#volunteer">Volunteer Abroad</a>
+          <a href="#shortterm">Short Term Camp Abroad</a>
+          <a href="#exchange">Exchange Program</a>
+          <a href="#contact">Contact Us</a>
         </nav>
       </header>
 
       <section class="intro">
         <h1>About Us</h1>
         <p>
-
+          The core values of us are respect, acceptance, and appreciation of the cultural diversity that exists in the world.
+          We envision a world where everyone is free to have their own convictions and accepts that others have the right to live in peace,
+          regardless of the diversity of their beliefs, identity or way of life.
         </p>
         <p>
-
+          We recognize that intolerance stems from ignorance and fear of different cultures, nations, or religions.
+          Thus, we provide exchange programs that contribute to the understanding and learning of societies with a different culture, religion, political, or economic system.
         </p>
       </section>
 
@@ -53,11 +67,23 @@
       <section class="contact">
         <h1>Contact Us</h1>
         <h3>Address</h3>
+        <p>CAN Mezzanine</p>
+        <p>32-36 Loman Street</p>
+        <p>London</p>
+        <p>SE1 0EH</p>
+
         <h3>Telephone no.</h3>
+        <p>020 3751 3000</p>
         <h3>Email</h3>
+        <p>info@think-global.org.uk</p>
 
         <br>
         <h2>Follow Us</h2>
+        <p>
+        <a href="https://www.facebook.com/thinkglobaluk">Facebook</a>
+        <a href="https://twitter.com/ThinkGlobalUK">Twitter</a>
+        <a href="https://www.linkedin.com/company/think-global">LinkedIn</a>
+        </p>
       </section>
 
     </div>
