Sorting out html content

--- a/exchange.html
+++ b/exchange.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Think Global Exchange Programs </title>
-    <link rel="stylesheet" type="text/css" href= "style.css">
+    <link rel="stylesheet" type="text/css" href= "css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="exchange.js"></script>
@@ -92,9 +92,9 @@
         <br>
         <h2>Follow Us</h2>
         <p>
-        <a href="https://www.facebook.com/thinkglobaluk">Facebook</a>
-        <a href="https://twitter.com/ThinkGlobalUK">Twitter</a>
-        <a href="https://www.linkedin.com/company/think-global">LinkedIn</a>
+        <a href="https://www.facebook.com/thinkglobaluk" target="_New">Facebook</a>
+        <a href="https://twitter.com/ThinkGlobalUK" target="_New">Twitter</a>
+        <a href="https://www.linkedin.com/company/think-global" target="_New">LinkedIn</a>
         </p>
       </section>
 
